tests/NormalTests/paczka1/small_fuzzy/78547110.err
Error in line 2: A339 A905 24,4
Error in line 3: rbQ6uHLD A905 50,0
